deploy-flask.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy
  namespace: test-flask
  labels:
    app: deploy

spec:
  replicas: 2 
  selector:
    matchLabels:
      app: deploy
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: deploy
    spec:
      containers:
      - name: deploy-pod
        image: duribef/devops
        volumeMounts:
          - name: config-vol
            mountPath: /config
        imagePullPolicy: Always
        resources:
          limits:
            cpu: "500m"
            memory: "128Mi"
          requests:
            cpu: "250m"
            memory: "64Mi"
        ports:
        - containerPort: 5000
        livenessProbe:
          httpGet:
            path: /liveness
            port: 5000
          initialDelaySeconds: 5
          timeoutSeconds: 2
          periodSeconds: 5
          failureThreshold: 2
        readinessProbe:
          httpGet:
            path: /readiness
            port: 5000
          initialDelaySeconds: 5
          timeoutSeconds: 1
      volumes:
        - name: volumen
          emptyDir: {}
        - name: config-vol
          configMap:
            name: appconfig
