live-readiness.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: healthcheck
  namespace: test-flask
  labels:
    app: healthcheck

spec:
  replicas: 2 
  selector:
    matchLabels:
      app: healthcheck
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: healthcheck
    spec:
      containers:
      - name: healthcheck-pod
        image: duribef/devops
        imagePullPolicy: Always
        resources:
          limits:
            cpu: "500m"
            memory: "128Mi"
          requests:
            cpu: "250m"
            memory: "64Mi"
        ports:
        - containerPort: 5000
        livenessProbe:
          httpGet:
            path: /liveness
            port: 5000
          initialDelaySeconds: 5
          timeoutSeconds: 2
          periodSeconds: 5
          failureThreshold: 2
        readinessProbe:
          httpGet:
            path: /readiness
            port: 5000
          initialDelaySeconds: 5
          timeoutSeconds: 1
      volumes:
        - name: volumen
          emptyDir: {}
