service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: clusterip
  namespace: test-flask
  name: service-clusterip
spec:
  ports:
  - name: "flask-port"
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: healthcheck
  type: ClusterIP
status:
  loadBalancer: {}
