service-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: service-nodeport
  namespace: test-flask

spec:
  type: NodePort
  ports:
    - port: 5000
      nodePort: 30000
      targetPort: 5000
      name: http
  selector:
    app: healthcheck
